update coop study

--- a/manuscripts/24-lmtp-coop-church/v5-man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/v5-man-lmtp-ow-coop-church.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal effect of religious service attendance on charitable donations and volunteering, minority-group-attitudes, and help-received: evidence from a national panel study"
 abstract: |
-  This outcome-wide study employs panel data from the New Zealand Attitudes and Values Study to examine the causal effect of religious service attendance on prosocial behaviors across three dimensions: (1) charitable donations and volunteering; (2) attitudes towards minority groups ("warmth"); and (3) help received from others —- a novel metric for group-induced cooperation that avoids self-presentation bias (*N* =32.058, years = 2018-2021). To better understand the effects religious community participant we conduct a parallel comparison invetigation the causal effects of greater community engagement; Finally we model the population-wide effects of loss of religious activity and in a separate analysis of community engagelment. **Charitable Donations and Volunteering**:  Findings indicate that regular attendance at religious services increases annual charitable donations by an average of approximately $700 per adult across the population. We do not observed such an effect from greater community engagement. Both religious service and general community engagement, however, similarly elevate volunteering rates. **Prejudice Reduction**: Attendance at religious services enhances warmth towards all social groups. In contrast, general social engagement only reliably improves attitudes towards Māori, New Zealand's largest minority group. **Help Received**: Engagement in regular religious services leads to increased community support and friends, but not to greater support from family. Conversely, general social engagement boosts support from family and friends but not from the community. Finally, discontinuation of any religious service attendance results in reduced volunteering but does not affect charitable donations, suggesting that religious service may foster enduring charitable habits. In summary, acquiring religious service attendance enhances charitable giving and reduces prejudice more effectively than mere social engagement, with the cessation of religious services demonstrating distinct outcomes. This supports theories proposing that religious involvement cultivates charitable dispositions.
+  This outcome-wide study employs panel data from the New Zealand Attitudes and Values Study to examine the causal effect of religious service attendance on prosocial behaviors across three dimensions: (1) charitable donations and volunteering; (2) attitudes towards minority groups ("warmth"); and (3) help received from others —- a novel metric for group-induced cooperation that avoids self-presentation bias (*N* =XXXXX, years = 2018-2021). To better understand the effects religious community participant we conduct a parallel comparison invetigation the causal effects of greater community engagement; Finally we model the population-wide effects of loss of religious activity and in a separate analysis of community engagelment. **Charitable Donations and Volunteering**:  Findings indicate that regular attendance at religious services increases annual charitable donations by an average of approximately $700 per adult across the population. We do not observed such an effect from greater community engagement. Both religious service and general community engagement, however, similarly elevate volunteering rates. **Prejudice Reduction**: Attendance at religious services enhances warmth towards all social groups. In contrast, general social engagement only reliably improves attitudes towards Māori, New Zealand's largest minority group. **Help Received**: Engagement in regular religious services leads to increased community support and friends, but not to greater support from family. Conversely, general social engagement boosts support from family and friends but not from the community. Finally, discontinuation of any religious service attendance results in reduced volunteering but does not affect charitable donations, suggesting that religious service may foster enduring charitable habits. In summary, acquiring religious service attendance enhances charitable giving and reduces prejudice more effectively than mere social engagement, with the cessation of religious services demonstrating distinct outcomes. This supports theories proposing that religious involvement cultivates charitable dispositions.
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
@@ -159,7 +159,7 @@ graph_density_of_exposure_down<- here_read("graph_density_of_exposure_down")
 
 # import to manuscript -------------------------------------------------------
 
-
+tab_all_prosocial
 tab_all_prosocial <- here_read("tab_all_prosocial")
 tab_all_prosocial_null <- here_read("tab_all_prosocial_null")
 
@@ -558,11 +558,21 @@ Below, we evaluate positivity by reporting the number of cases in which individu
 
 ### Analysis
 
-We use a Sequentially Doubly-Robust (SDR) estimator designed for the analysis of longitudinal data within causal inference frameworks [@díaz2021]. The estimator is grounded in the principles of robust semi-parametric statistics, and is characterised first by its sequential approach to handling time-varying treatments and outcomes, and secondly by its double robustness property.
+<!-- We use a Sequentially Doubly-Robust (SDR) estimator designed for the analysis of longitudinal data within causal inference frameworks [@díaz2021]. The estimator is grounded in the principles of robust semi-parametric statistics, and is characterised first by its sequential approach to handling time-varying treatments and outcomes, and secondly by its double robustness property. -->
 
-Fundamentally, the SDR estimator operates by iteratively regressing pseudo-outcomes on observed treatments and covariates at each time point, starting from the end of the observation period and proceeding backwards. This iterative process employs the concept of pseudo-outcomes, which are updated at each step based on the outcome of the regression, incorporating information from both the treatment mechanism and the outcome model.
+<!-- Fundamentally, the SDR estimator operates by iteratively regressing pseudo-outcomes on observed treatments and covariates at each time point, starting from the end of the observation period and proceeding backwards. This iterative process employs the concept of pseudo-outcomes, which are updated at each step based on the outcome of the regression, incorporating information from both the treatment mechanism and the outcome model. -->
 
-A key feature of the SDR estimator is its 'multiply robust' property, implying that the estimator remains consistent if, for each time point, either the model for the treatment assignment or the model for the outcome, conditional on past treatments and covariates, is correctly specified. This property significantly enhances the estimator's applicability to real-world scenarios such as ours, where model misspecification is a common challenge. Furthermore, the marriage of SDR and machine learning  reduces the dependence of inference on restrictive modelling assumptions and introduces an additional layer of robustness. For further details see [@hoffman2022; @hoffman2023; @díaz2021]. Estimation was performed using `lmtp` package [@williams2021]. 
+<!-- A key feature of the SDR estimator is its 'multiply robust' property, implying that the estimator remains consistent if, for each time point, either the model for the treatment assignment or the model for the outcome, conditional on past treatments and covariates, is correctly specified. This property significantly enhances the estimator's applicability to real-world scenarios such as ours, where model misspecification is a common challenge. Furthermore, the marriage of SDR and machine learning  reduces the dependence of inference on restrictive modelling assumptions and introduces an additional layer of robustness. For further details see [@hoffman2022; @hoffman2023; @díaz2021]. Estimation was performed using `lmtp` package [@williams2021].  -->
+
+
+We employ a semi-parametric estimator known as Targeted Minimum Loss-based Estimation (TMLE). TMLE is a robust method that combines machine learning techniques with traditional statistical models to estimate causal effects while providing valid statistical uncertainty measures for these estimates.
+
+TMLE operates through a two-step process involving both outcome and treatment (exposure) models. Initially, it employes machine learning algorithms to flexibly model the relationship between treatments, covariates, and outcomes. This flexibility allows TMLE to account for complex, high-dimensional covariate spaces without imposing restrictive model assumptions. The outcome of this step is a set of initial estimates for these relationships.
+
+The second step of TMLE involves "targeting" these initial estimates by incorporating information about the observed data distribution to improve the accuracy of the causal effect estimate. This is achieved through an iterative updating process, which adjusts the initial estimates towards the true causal effect. This updating process is guided by the efficient influence function, ensuring that the final TMLE estimate is as close as possible to the true causal effect while still being robust to model misspecification in either the outcome model or the treatment model.
+
+A central feature of TMLE is its double-robustness property, meaning that if either the model for the treatment or the outcome is correctly specified, the TMLE estimator will still consistently estimate the causal effect. Additionally, TMLE uses cross-validation to avoid overfitting and ensure that the estimator performs well in finite samples. Each of these steps contributes to a robust methodology for examining the *causal* effects on of interventions on outcomes. The marriage of TMLE and machine learning technologies reduces the dependence on restrictive modelling assumptions and introduces an additional layer of robustness. For further details see [@hoffman2022; @hoffman2023; @díaz2021]. We performed estimation using `lmtp` package [@williams2021].
+
 
 ### Eligibility criteria for inclusion in the causal effects of shifting to a gain of weekly religious service attendance
 
