update manuscript church cooperation

--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal effect of religious service attendance on charitable donations and volunteering, minority-group-attitudes, and help-received: evidence from a national panel study"
 abstract: |
-  This outcome-wide study employs panel data from the New Zealand Attitudes and Values Study to examine the causal effect of religious service attendance on prosocial behaviors across three dimensions: (1) charitable donations and volunteering; (2) attitudes towards minority groups ("warmth"); and (3) help received from others —- a novel metric for group-induced cooperation that avoids self-presentation bias (*N* =32.058, years = 2018-2021). To better understand the effects religious community participant we conduct a parallel comparison invetigation the causal effects of greater community engagement; Finally we model the population-wide effects of loss of religious activity and in a separate analysis of community engagelment. **Charitable Donations and Volunteering**:  Findings indicate that regular attendance at religious services increases annual charitable donations by an average of approximately $700 per adult across the population. We do not observed such an effect from greater community engagement. Both religious service and general community engagement, however, similarly elevate volunteering rates. **Prejudice Reduction**: Attendance at religious services enhances warmth towards all social groups. In contrast, general social engagement only reliably improves attitudes towards Māori, New Zealand's largest minority group. **Help Received**: Engagement in regular religious services leads to increased community support and friends, but not to greater support from family. Conversely, general social engagement boosts support from family and friends but not from the community. Finally, discontinuation of any religious service attendance results in reduced volunteering but does not affect charitable donations, suggesting that religious service may foster enduring charitable habits. In summary, acquiring religious service attendance enhances charitable giving and reduces prejudice more effectively than mere social engagement, with the cessation of religious services demonstrating distinct outcomes. This supports theories proposing that religious involvement cultivates charitable dispositions.
+  The question of whether religion causes prosociality is poorly defined. To make this question precise we must to state the causal contrasts of interest, specific measures of "prosociality," and the target population for whom results generalise. Here we investigate the one-year effect of three hypothetical interventions on religious service attendance across the New Zealand population. The causal contrasts are: (1) weekly (or more) religious service attendance vs zero attendance, which addresses the question "what would be the difference if everyone attended weekly religious service compared with no-one attending?"; (2) weekly (or more) religious service attendance vs the observed attenendance rate, which addresses the question: "what would difference would it make to the measured prosociality outcomes if everyone in the country switched to weekly religious service if they were not attending already?" (3) zero religious service attendance vs the observed attenendance rate, which addresses the question: "what would be the difference if religious service attendance were to disappear altogther?" Because "prosociality" is ill-defined we must describe our measures. Here,  we evaluate (1) **self-reported weekly volunteering**; (2) **self-reported annual charitable donations**; (3) **three available measures of perceived social connection** (social belonging, social support, neighbourhood belonging) (4) **three available measures of reported voluntary help received from others** (from family, friends,and people in the community); (5) **three available measures of reported financial help received from others** (from family, friends, and people in the community). The measures of help-recieved avoid self-presentation bias. Overall we find evidence in most domains for prosocial benefit, however, the quality and magnitude of benefit varies depending on the causal contrast of interest, and is generally much weaker than might be inferred from ill-defined parametric models. Nevertheless, religious service has economic considerable economic benefits. These findings illustrate a pathway for more rigourous investigations for the causal effects of religious behaviours. 
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
@@ -147,13 +147,21 @@ b_cross_socialising_on_donate <-inline_text(lm_coef_fit_socialising_on_donate, v
 
 # use
 b_cross_socialising_on_donate
-\
 
 
-fit_socialising_on_volunteer <-here_read("fit_socialising_on_volunteer")
-fit_socialising_on_volunteer <-here_read("fit_socialising_on_volunteer")
-lm_coef_fit_socialising_on_volunteer <- tbl_regression(fit_socialising_on_volunteer)
-b_cross_socialising_on_volunteer <-inline_text(lm_coef_fit_socialising_on_volunteer, variable = hours_community_sqrt_round, pattern = "b = {estimate}; (95% CI {conf.low}, {conf.high})")
+
+fit_church_on_charity_donate<- here_read('fit_church_on_charity_donate')
+fit_church_on_hours_charity<- here_read('fit_church_on_hours_charity')
+fit_church_on_hours_charity<- here_read('fit_church_on_hours_charity')
+fit_church_on_community_money_binary<- here_read('fit_church_on_community_money_binary')
+
+
+lm_coeffit_church_on_hours_charity <- tbl_regression(fit_church_on_hours_charity)
+b_church_on_hours_charity <-inline_text(lm_coeffit_church_on_hours_charity, variable = religion_church_round, pattern = "b = {estimate}; (95% CI {conf.low}, {conf.high})")
+
+
+lm_coef_fit_church_on_charity_donate <- tbl_regression(fit_church_on_charity_donate)
+b_church_on_charity_donate <-inline_text(lm_coef_fit_church_on_charity_donate, variable = religion_church_round, pattern = "b = {estimate}; (95% CI {conf.low}, {conf.high})")
 
 # use
 b_cross_socialising_on_volunteer
