--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal effect of religious service attendance on charitable donations and volunteering, minority-group-attitudes, and help-received: evidence from a national panel study"
 abstract: |
-  The question of whether religion causes prosociality is poorly defined. To make this question precise we must to state the causal contrasts of interest, specific measures of "prosociality," and the target population for whom results generalise. Here we investigate the one-year effect of three hypothetical interventions on religious service attendance across the New Zealand population. The causal contrasts are: (1) weekly (or more) religious service attendance vs zero attendance, which addresses the question "what would be the difference if everyone attended weekly religious service compared with no-one attending?"; (2) weekly (or more) religious service attendance vs the observed attenendance rate, which addresses the question: "what would difference would it make to the measured prosociality outcomes if everyone in the country switched to weekly religious service if they were not attending already?" (3) zero religious service attendance vs the observed attenendance rate, which addresses the question: "what would be the difference if religious service attendance were to disappear altogther?" Because "prosociality" is ill-defined we must describe our measures. Here,  we evaluate (1) **self-reported weekly volunteering**; (2) **self-reported annual charitable donations**; (3) **three available measures of perceived social connection** (social belonging, social support, neighbourhood belonging) (4) **three available measures of reported voluntary help received from others** (from family, friends,and people in the community); (5) **three available measures of reported financial help received from others** (from family, friends, and people in the community). The measures of help-recieved avoid self-presentation bias. Overall we find evidence in most domains for prosocial benefit, however, the quality and magnitude of benefit varies depending on the causal contrast of interest, and is generally much weaker than might be inferred from ill-defined parametric models. Nevertheless, religious service has economic considerable economic benefits. These findings illustrate a pathway for more rigourous investigations for the causal effects of religious behaviours. 
+  The question of whether religion causes prosociality is poorly defined. To make this question precise we must to state the causal contrasts of interest, specific measures of "prosociality," and the target population for whom results are meant to generalise. Here we investigate the one-year effect of three hypothetical interventions on religious service attendance across the New Zealand population. The causal contrasts are: (1) weekly (or more) religious service attendance vs zero attendance, which addresses the question "what would be the difference if everyone attended weekly religious service compared with if no-one attended?"; (2) weekly (or more) religious service attendance vs the observed attenendance rate, which addresses the question: "what would be the difference if everyone in the country that was not attending weekly religious service switched to regular attendance?" (3) No religious service attendance vs the observed attenendance rate, which addresses the question: "what would be the difference if religious service attendance disappeared altoghether?" Our measures of prosociality are: Study 1: (a) self-reported hours of weekly volunteering; (b) self-reported annual charitable financial donations (dollars); Study 2: perceived social connection (a) social belonging (ordinal 1-7), social support (ordinal 1-7), neighbourhood belonging (ordinal 1-7); Study 3: reported personal help received in the previous week from (a) family (yes/no) (b) friends (yes/no) , and (c) people in the community (yes/no); Study 4: reported financial help received from from (a) family (yes/no), friends (yes/no), and people in the community (yes/no). Notably the measures in studies 3 and 4 avoid self presentation bias. We computed measures of effect on the difference scale for continous and ordinal outcomes and on the risk-ratio scale for binary outcomes. Overall we find evidence across most domains for prosocial benefit; however, the quality and magnitude of benefit varies depending on the estimand of interest, and is generally much weaker than might be inferred from ill-defined parametric models. Nevertheless, religious service has economic considerable economic benefits which we compute for the hypothetical policy interventions. These findings illustrate a pathway for quantitative investigations of the causal effects of religious behaviours. 
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
